Bug 1606305 - Don't forget to record the location of newline and tab characters when creating a textrun for a zero-size font. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D59608